Accessibility Linux: Fix text attributes

Orca expects text attributes with different names (and sometimes also
different values) than IAccessible2 ones (which Qt uses). So adapt the names
and values accordingly.

[ChangeLog][Accessibility] We now report text attributes correctly on Linux,
so ORCA+F now works properly in QTextEdit and other text controls.

Change-Id: I55ead0e87e7e298f4fae14a197716f86494334b0
Task-number: QTBUG-44479
Reviewed-by: Jan Arve Sæther <jan-arve.saether@theqtcompany.com>

cregit: b873043fc42db9fc170472874fbf7367989b64ff https://github.com/qt/qtbase/commit/b873043fc42db9fc170472874fbf7367989b64ff